--- a/package.json
+++ b/package.json
@@ -1,25 +1,55 @@
 {
-  "name": "crearis-framework",
-  "private": true,
-  "repository": "crearis/base",
+  "name": "@crearis/base",
+  "publish-branch": "crearis-base",
+  "version": "0.0.3",
+  "description": "decentralized content for the cultural sector",
+  "keywords": [
+    "nuxt",
+    "content",
+    "module"
+  ],
   "license": "MIT",
   "type": "module",
+  "private": false,
   "scripts": {
-    "build": "FORCE_COLOR=1 pnpm --filter './packages/**' prepack",
-    "cleanup": "rimraf 'packages/**/node_modules' 'node_modules'",
-    "dev": "pnpm play",
-    "lint": "eslint --ext .vue,.ts,.js,.mjs .",
-    "nuxi": "NUXT_TELEMETRY_DISABLED=1 JITI_ESM_RESOLVE=1 nuxi",
-    "nuxt": "NUXT_TELEMETRY_DISABLED=1 JITI_ESM_RESOLVE=1 nuxi",
-    "play": "pnpm nuxi dev playground",
-    "play:build": "pnpm nuxi build playground",
-    "play:preview": "pnpm nuxi preview playground"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "generate": "nuxi generate",
+    "start": "nuxi start",
+    "preview": "nuxi preview",
+    "lint": "eslint ."
   },
-  "packageManager": "pnpm@7.15.0",
-  "engines": {
-    "node": "^14.16.0 || ^16.10.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
-  },
-  "devDependencies": {
-    "rimraf": "^3.0.2"
+  "files": [
+    "base/app/",
+    "base/components/",
+    "base/content/",
+    "base/layouts/",
+    "base/plugins/",
+    "base/public/",
+    "base/app.config.ts",
+    "base/app.vue",
+    "base/constants.ts",
+    "base/nuxt.config.ts",
+    "base/tailwind.config.ts"
+  ],
+  "dependencies": {
+    "@vimeo/player": "^2.18.0",
+    "nuxt-icon": "^0.1.6",
+    "postcss": "^8.4.17",
+    "postcss-custom-properties": "^12.1.9",
+    "vue3-carousel": "^0.2.0",
+    "@nuxt/content": "^2.1.1",
+    "@nuxtjs/color-mode": "^3.1.5",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/html-validator": "^1.1.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.7",
+    "@vueuse/core": "^9.3.1",
+    "@vueuse/nuxt": "^9.3.1",
+    "daisyui": "^2.31.0",
+    "daisyui-vue": "^0.0.1-alpha.8",
+    "eslint": "^8.23.1",
+    "nuxt": "3.0.0-rc.11",
+    "typescript": "^4.8.3"    
   }
 }
